--- a/package.json
+++ b/package.json
@@ -16,23 +16,22 @@
   ],
   "author": "kstafford3",
   "license": "MIT",
-  "repository" :
-  {
-    "type" : "git",
-    "url" : "https://github.com/kstafford3/posibly.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kstafford3/posibly.git"
   },
   "dependencies": {
     "custom-edit-distance": "^0.1.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^4.0.1",
-    "pos": "^0.4.2",
-    "eslint": "^4.12.1",
+    "chai": "^4.2.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "mocha": "^4.1.0",
+    "pos": "^0.4.2"
   }
 }
